Fix overflow error on scrolling elements

--- a/styles/material_categories.css
+++ b/styles/material_categories.css
@@ -1,3 +1,8 @@
+#main_container {
+    padding-top: 125px;
+    padding-bottom: 20px;
+}
+
 .main_button {
-    min-height: 10vh;
+    font-size: 1.7rem;
 }
