--- a/styles/other_resources.css
+++ b/styles/other_resources.css
@@ -14,7 +14,7 @@
     align-items: center;
     color: white;
     background-color: #187753;
-    font-size: 1.2rem;
+    font-size: 1.5em;
     gap: 15px;
 }
 
